# gfmodules-nationale-verwijsindex-crypto-service-api

./: .gitignore  Makefile  README.md  app.conf.example  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
app/: application.py  config.py  container.py  stats.py
app/exceptions/: exception.py
app/logging/: config_builder.py  events.py  formatter.py  middleware.py
app/routers/: crypto.py  default.py  health.py
app/services/: http.py  prs_registration_service.py  pseudonym_service.py
app/services/crypto/: crypto_service.py  factory.py  hsm_api_crypto_service.py  hsm_crypto_service.py  json_keystore.py  memory_crypto_service.py  mock_crypto_service.py
docker/: Dockerfile  init-standalone.sh
tests/: conftest.py  test_example.py
tests/integration/: conftest.py  test_decrypt_and_hash_flow.py  test_health_flow.py  test_startup_flow.py
tests/unit/: test_application.py  test_config.py
tests/unit/logging/: test_config_builder.py  test_events.py  test_filters.py  test_formatter.py  test_middleware.py
tests/unit/routers/: test_crypto.py  test_default.py  test_health.py
tests/unit/services/: test_http.py  test_prs_registration.py  test_pseudonym_service.py
tests/unit/services/crypto/: test_decrypt_jwe_payload.py  test_hsm_api_crypto.py  test_mock_crypto.py
tools/: test_flow.py
